Added jacoco and surefire plugins